Enmiendas detail fix overlap

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -242,7 +242,7 @@ header {
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 2;
+  z-index: 11;
   height: 65px;
   padding: 0 25px;
   border-bottom: 1px solid #dbdbdb; }
