--- a/src/css/scss/_header.scss
+++ b/src/css/scss/_header.scss
@@ -6,7 +6,7 @@ header{
     position: fixed;
     top: 0;
     left: 0;
-    z-index: 2;
+    z-index: 11;
     height: 65px;
     padding: 0 25px;
     border-bottom: 1px solid $lighterGray;
